k8s_manifest/prod/networking/ingress_dafault_deny_prod.yml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:   
  name: ingress-deafult-deny-prod
  namespace: prod
spec:
  podSelector: {}
  policyTypes:   
  - Ingress
